Update documentation

The signal is updated much faster for paused media now.

Fixes: QTBUG-98918
Change-Id: Ifa3b54e212436a7c93e101dc244d7edcbf473b63
Reviewed-by: Michal Klocek <michal.klocek@qt.io>
(cherry picked from commit b6099cd9d1efab2af4a38476b3f543796f26f065)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>